--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   },
   "author": "",
   "license": "MIT",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "axios": "^0.18.1",
     "cheerio": "^1.0.0-rc.2",
-    "puppeteer": "^1.13.0"
+    "puppeteer": "^1.13.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.13",
+    "mysql2": "^2.2.5"
   }
 }
